#update
change encoding back
fix script
updated javadoc lint warnings